<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B0FF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/layout_title"
        android:layout_width="155dp"
        android:layout_height="36dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/add_new_mono"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_title">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#3000B0FF"
            android:hint="@string/name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/input_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#3000B0FF"
            android:gravity="top"
            android:hint="@string/company"
            android:lines="1"
            android:padding="10dp" />

        <EditText
            android:id="@+id/input_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#3000B0FF"
            android:gravity="top"
            android:hint="@string/screen"
            android:lines="1"
            android:padding="10dp" />

        <EditText
            android:id="@+id/input_ram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#3000B0FF"
            android:gravity="top"
            android:hint="@string/ram"
            android:lines="1"
            android:padding="10dp" />

        <EditText
            android:id="@+id/input_ssd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#3000B0FF"
            android:gravity="top"
            android:hint="@string/ssd"
            android:lines="1"
            android:padding="10dp" />

        <EditText
            android:id="@+id/input_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#3000B0FF"
            android:gravity="top"
            android:hint="@string/system"
            android:lines="1"
            android:padding="10dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/white"
        android:text="@string/save"
        android:textColor="#00B0FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>